--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/nst2023
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.mvc.date-format="yyyy-MM-dd"
+
 #spring.jpa.hibernate.ddl-auto = update
 
 springdoc.swagger-ui.path=/swagger-ui.html
