Added a new endpoint for upgrading  roles for members to directors or secretaries.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=
 
 spring.mvc.date-format="yyyy-MM-dd"
 
-#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = none
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
@@ -18,3 +18,7 @@ spring.liquibase.default-schema=nst2023
 spring.liquibase.url=jdbc:mysql://localhost:3306/nst2023
 spring.liquibase.user=root
 spring.liquibase.password=
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
